# gdal

./: CMakeLists.txt
gcore/: gdal_version.h
ogr/ogrsf_frmts/mssqlspatial/: drv_mssqlspatial.html  ogrmssqlspatialdatasource.cpp
port/: cpl_config.h
